# rust-by-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml  pull_request.yml
migrations/2020-09-24-213650_mentions/: up.sql
migrations/202009242136500_mentions/: down.sql
src/: main.rs  mention_dao.rs  mention_repository.rs  mentions.rs  models.rs  schema.rs
