[package]
name = "rust-by-bot"
version = "0.1.0"
authors = ["Ihar Novik <nolik03@godeltech.com>"]
edition = "2018"

[dependencies]
telegram-bot = "0.7.0"

tokio = { version = "0.2", features = ["fs"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "time", "fs"] }