[package]
name = "rust-by-bot"
version = "0.1.0"
authors = ["Ihar Novik <nolik03@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = "0.7.0"
regex = "1.3.9"
chrono = "0.4.15"

tokio = { version = "0.2", features = ["macros", "time", "fs"] }
futures = "0.3"
openssl = { version = "0.10.30", features = ["vendored"] }
