[package]
name = "rust-by-bot"
version = "0.1.0"
authors = ["Ihar Novik <nolik03@gmail.com>"]
edition = "2018"

[dependencies]
telegram-bot = "0.8.0"
regex = "1.3.9"
chrono = "0.4.15"

tokio = { version = "0.2", features = ["macros", "time", "fs"] }
futures = "0.3"

diesel = { version = "1.4.5", features = ["postgres", "chrono"] }